--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="OWXWO">
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>OWXWO</title>
 </head>
 <body>
