--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 <a href='https://www.facebook.com/' target='_blank'>Facebook</a> | 
 <a href='https://twitter.com/' target='_blank'>Twitter</a> | 
 <a href='https://outlook.live.com/' target='_blank'>Outlook</a> | 
-<a href='https://tronscan.io/' target='_blank'>Tronscan</a>
+<a href='https://tronscan.io/' target='_blank'>Tronscan</a> | 
+<a href='https://usdt.tokenview.com/en/address/TXMcxz1Bx7AmiUfHivRq91tiVuT61df67u' target='_blank'>D1接码USDT交易查询</a> | 
+<a href='https://www2.baidu.com' target='_blank'>百度推广</a> |
+<a href='https://su.baidu.com' target='_blank'>百度云加速</a> |
+
+
+
 </body>
 </html>
