--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href='https://bwh81.net/' target='_blank'>Bandwagonhost(bwh81.net)</a> |
 <a href='https://www.hostwinds.com/' target='_blank'>Hostwinds</a> |
 <a href='https://www.godaddy.com/' target='_blank'>Godaddy</a> |
+<a href='https://www.gate.io/' target='_blank'>gate.io</a> |
 <a href='https://tether.to/' target='_blank'>Tether</a> | 
 <a href='https://www.omniexplorer.info/' target='_blank'>OmniExplorer</a> |
 <a href='https://api.omniexplorer.info/' target='_blank'>OmniExplorer(API)</a> |
